# samvit

./: .env.example  .gitignore  KNOWN_GAPS.md  README.md  REQUIREMENTS.md  USAGE.md  local.properties.example  main.py  metadata.json  requirements.txt  samvit_run_journal.jsonl  settings.gradle.kts
.github/workflows/: build.yml
agent/: __init__.py  orchestrator.py
agent/core/: checkpoint.py  gemini_manager.py  models.py
agent/pipeline/: __init__.py  p01_requirements.py  p03_architecture.py  p05_datasheet.py  p06_component_db.py  p07_component_search.py  p08_part_selection.py  p09_compatibility.py  p10_schematic_graph.py  p10b_hwdl_validate.py  p11_schematic_gen.py  p12_footprint.py  p13_placement.py  p14_routing.py  p15_rules.py  p16_erc.py  p17_drc.py  p18_power.py  p19_thermal.py  (+11 more)
app/: build.gradle.kts  proguard-rules.pro
backend/: agent.py  main.py
gradle/: libs.versions.toml
hardware/: README.md
hardware/haptic_vest_cpp/: CMakeLists.txt  README.md  camera_fusion.cpp  camera_fusion.h  config.h  connector.cpp  connector.h  depth_processing.cpp  depth_processing.h  main.cpp  motor_driver.cpp  motor_driver.h
hardware/haptic_vest_cpp/compiled/: haptic_vest
hardware_builder/: compatibility_checker.py  component_retrival.py  db_builder.py  part_selection_engine.py  samvit_parts.db  schema.md  web_search_connector.py
hardware_parser/: __init__.py  ast_nodes.py  compiler.py  diagnostics.py  ir_emitter.py  lexer.py  normalizer.py  parser.md  parser.py  resolver.py  units.py  validator.py
samvit/: orchestrator.py
tools/: gemini_health_check.py
(+116 files in other folders)
